--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqwytd266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/iqwytd266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqwytd266/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqwytd266/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iqwytd266/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704444.md#1" target="_blank">美议员：中共是最大人权侵害者 须公开点名</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704444.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capitol_Building-1-150x120.jpg" align ="left"></a>12月5日，美国国会两党两院数名议员公开表示，支持香港抗议活动，谴责中共制裁美非政府组织。美国众院外委会共和党首席议员表示，中共是地球上最大人权侵害者，必须公开点名它。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704805.md#1" target="_blank">央视盗用篡改港媒图片撑警 被原作者抓包</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704805.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/CCTV-150x120.jpg" align ="left"></a>中共喉舌中央电视台日前盗用香港媒体的图片，并篡改其图片含义来支持港警，已侵犯该媒体的著作权并对其形象造成负面影响，该媒体要求央视将相关图片下架，同时对其摄影师提出赔偿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:29 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704694.md#1" target="_blank">贵安新区公安局前局长被双开 长期包养情妇</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/6/n11704694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3ca321b108d2cb590fa1c5bcdf96ffa2-150x120.jpg" align ="left"></a>12月3日，中共贵州省纪监委通报，贵安新区管委会前党组成员，贵安新区公安局前党委书记、局长高永昌被双开。通报指高永昌不仅受贿数额特别大，而且还与多女搞权色交易，长期养情妇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703901.md#1" target="_blank">华为失民心 孟晚舟鸡汤信败给李洪元251</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/10-5-150x120.jpg" align ="left"></a>中国电讯巨头华为的爱国光环褪色，“华为公主”孟晚舟的鸡汤文更收到中国网民的犀利回应：“小孟在豪宅忍辱负重，小李在看守所砥励前行”，横批“251”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 11:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11704015.md#1" target="_blank">大陆网上公开贩卖人脸数据 信息疑遭泄露</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11704015.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7ee8fda6b05ec3eb6f4bace7464415fb-150x120.jpg" align ="left"></a>人脸识别技术在中国大陆被广泛运用到监视系统。然而，央视近日自曝人脸数据已遭贩卖，人脸信息泄露引发民众愤怒和忧虑。外界质疑，人脸识别技术在中国被非法滥用，安全方面存在漏洞，因此归咎于黑市。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703843.md#1" target="_blank">《半夜鸡叫》作者去世 中共斗地主杜撰周扒皮</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703843.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6e72e157-8605-449b-b75d-2e5c3d672cff-800x533-150x120.jpg" align ="left"></a>近日，曾经创作出家喻户晓的地主形象“周扒皮”的作者高玉宝因病去世，引发舆论关注。尽管人们现在逐渐认识到中共教科书上描述的“周扒皮”事迹是虚构的，但地主剥削雇农的负面形象早已深入人心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703917.md#1" target="_blank">总统大选在即 台法院判处共谍案 3人获刑</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1808231139272378-150x120.jpg" align ="left"></a>台湾距离2020年1月11日总统与立法委员选举不到40天时间。11月23日澳洲媒体爆出的“王立强共谍案”仍在台湾岛内引发热议。本周12月3日，台湾法院即出炉判处两起分别与中共有关的政治献金案和在台吸收共谍案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703718.md#1" target="_blank">范冰冰赴美为好莱坞影片配音 身材发福引热议</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/VCG111126431515_meitu_1-150x120.jpg" align ="left"></a>去年卷入逃税风波的大陆女星范冰冰，12月4日现身北京机场，准备前往美国洛杉矶为好莱坞影片《355》配音。不知是否因获准复出而受到许多粉丝热情送行并心情大好，一向注重保暖的她，此次似乎忘了拉上外套的拉链，让眼尖的网友发现她身材发福，肚子明显凸起，引发热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703496.md#1" target="_blank">【新闻看点】北京战狼式外交 加速孤立于世界</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg" align ="left"></a>距离12月15日美国提高中国商品关税的时间还有10天，今天（12月5日）中共口风放软了。中共商务部发言人高峰表示，如果中美双方达成第一阶段协议，应该相应降低关税。中方突然放软身段，与前几天的强硬表现大不相同。有知情人向彭博社透露，第一阶段协议可能在12月15日美方提高关税前完成。川普对美中谈判表达悲观之后，昨天表示美中谈判进展“非常顺利”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 5:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank">对民企能不捕的不捕 中共最高检言论遭轰</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>据中共官媒报导，中共最高检长张军3日在参加最高检开放日活动时声称要“保护民营企业合法权益”，提出“对涉嫌犯罪的民营企业负责人能不捕的不捕，能不诉的不诉，能缓刑的缓刑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703340.md#1" target="_blank">中共央视漫画攻击美国 弄出国际大笑话</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a8b49962e43c02ce760f77b4e484ab00-150x120.jpg" align ="left"></a>美国通过《香港人权与民主法案》后，中共央视用漫画攻击美国，不料弄出个国际级笑话——错把美国国会山庄当白宫，反遭讥讽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 3:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703525.md#1" target="_blank">蓬佩奥访问葡萄牙：与华为合作带来风险</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186559421-150x120.jpg" align ="left"></a>美国国务卿迈克·蓬佩奥（Mike Pompeo）于周四（12月5日）在里斯本向记者表示，在“过去两年里”，美国在努力确保其全球合作伙伴意识到与华为等公司合作的风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank">美媒：629名巴基斯坦女子被贩到中国当新娘</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703260.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1148931765-150x120.jpg" align ="left"></a>一张又一张的白纸上堆满了名字：来自巴基斯坦各地的629名女孩和妇女被卖到中国作新娘，屡屡雪上加霜，境遇凄惨。整理该清单的巴基斯坦调查人员决心破获这个将该国穷人和弱势群体作为贩卖对象的犯罪网络。没想到，他们调查的脚步却因两国之间“有利可图的”关系而被迫停止。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:23 AM							</td></tr>
@@ -31,16 +41,6 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700987.md#1" target="_blank">香港商台宣布取消叱咤乐坛颁奖礼 网民热议</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-17_16-34-02-150x120.jpg" align ="left"></a>继港台和新城宣布取消今年的实体颁奖礼之后，一直坚持如期举行“叱咤乐坛颁奖典礼”的香港商业电台，12月4日以安全问题为由宣布取消明年1月1日举行该项盛事，引发热议。网民纷纷质疑事件与寄寓香港精神的歌曲《愿荣光归香港》被力推为“我最喜爱的歌曲”有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701182.md#1" target="_blank">作家陶杰执导新片《香港》有望为港人解忧</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701182.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/11/141104065221100311-150x120.jpg" align ="left"></a>专栏作家陶杰日前执导片长为40分钟的影片《香港》。该片包括六个相对独立而又有紧密联系的故事，不同的故事各以香港十八区的名字命名，包括铜锣湾、炮台山、天后、西环河及金钟等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 8:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700803.md#1" target="_blank">【新闻看点】接连受重击 北京最大噩梦要来了</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700803.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/19-12-023.32-150x120.jpg" align ="left"></a>最近中共接连遭受重击，国际社会几乎形成了联动，纷纷针对中共出台各项措施。而在国内，广东茂名村民经过3天勇武抗争，终于迫使当局公开让步道歉。几天来，国际加紧围猎封堵中共，国内民众勇武抗争成功，北京最大的噩梦要来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700936.md#1" target="_blank">【新闻看点】北京抹黑王立强案 专家：情报可信</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700936.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-11-2811.32-600x400-150x120.jpg" align ="left"></a>中共外交部发言人华春莹表示，澳洲炒作王立强案，只是一个“荒唐可笑的闹剧、粗制滥造的肥皂剧”。但美国情报专家认为，王立强也许不是专业的职业间谍，但他透露的情报“非常值得关注和认真分析”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701169.md#1" target="_blank">被辞职成话题 罗家聪：反映意识形态之战</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701169.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20180624-RTHK-kiri-4-1-150x120.jpg" align ="left"></a>反送中运动近半年，虽金融界一向政治冷感，但寒蝉效应已不断蔓延。有港版“末日博士”之称的交通银行（香港）前首席经济师罗家聪，因日前接受外媒采访大爆辞职内幕，一夜间成为焦点。他12月4日接受《大纪元时报》专访时坦言，自己被辞职登上外媒头条，反映出共产主义和资本主义意识形态之战。面对中资言论进一步收紧，他强调，所谓“君子爱财，取之有道”，自己不愿意屈服，惟有离开。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701145.md#1" target="_blank">关系紧张之际 美中两军参谋长首次通话</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701145.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-590013154-150x120.jpg" align ="left"></a>就在美国总统川普签署香港人权法案，众议院通过新疆法案先后引发中共跳脚回应之际，美国和中国军方最高官员进行了通话，力图缓和香港人权法通过后的紧张气氛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank">美专家：若消息属实 向心夫妇或自愿留台湾</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capture-2-150x120.jpg" align ="left"></a>中共情报人员王立强投诚澳洲后，在国际社会激起了巨大反响。王立强指证的上司中创董事会主席向心、龚青夫妇，在离境台湾时，被移送台北地检署复查，被限制出境、出海。最新消息透露，向心、龚青夫妇选择自愿留在台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701063.md#1" target="_blank">供应链转移 美中型企业寻找中国以外市场</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11701063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/6e495e577ecf267edd6e32add6991dd3-150x120.jpg" align ="left"></a>不仅卡特彼勒以及孩之宝（Hasbro）等大型公司受到美中贸易战的冲击，周三（12月4日）发布的一份调查报告显示，美国中型企业已经开始寻找中国以外的客户销售产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700274.md#1" target="_blank">台湾6成3民众相信中共干预台大选</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700274.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4de44ffad1ffa91abe3b530535c11d56-150x120.jpg" align ="left"></a>台湾制宪基金会4日发布“中国在台湾选举中扮演的角色：最新2020总统与立委选情”民调结果显示，63.3%受访者相信中国（中共）企图利用各种方式来影响台湾2020年总统选举结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700880.md#1" target="_blank">向心豪宅“房客” 网路新贵总经理被约谈</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700880.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dddfc73fed4622988dc481ba6d33afbb-150x120.jpg" align ="left"></a>共谍案主角向心夫妇砸重金在信义区买下三户豪宅，其中一户豪宅租给一家网路公司“优爱德”。台湾检方近日传唤优爱德总经理张天豪，但他供称只是向心的房客，讯后将他请回。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700822.md#1" target="_blank">英国首相：考虑把华为排除在5G网络之外</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186413236-150x120.jpg" align ="left"></a>在周三（12月4日）的北约峰会上，与会各国在电信安全问题上达成一致。英国首相鲍里斯·约翰逊（Boris Johnson）在记者会上表示，如果华为有可能危及英国国家安全，或危及到英国与其??他“五眼”国家的合作，英政府将把华为排除在5G网络建设之外。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700578.md#1" target="_blank">TikTok被告上美法庭 下载量惊人市值曝光</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700578.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1073256664-150x120.jpg" align ="left"></a>上周三（11月27日），中国“抖音”国际版TikTok有超过一百名国际用户在加利福尼亚州北区地方法庭提起诉讼，TikTok及其母公司“字节跳动”等共四个相关实体面临八项指控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700587.md#1" target="_blank">北约峰会聚焦中共挑战和5G基础设施</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/4/n11700587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MS960-150x120.jpg" align ="left"></a>北大西洋公约（简称北约）成立70周年，各成员国周二（3日）和周三（4日）聚集在伦敦。据北约秘书长透露，周三的会谈各国元首聚焦的议题会包括武器控制、5G关键基础设施等。此外，还首次将中共构成的战略挑战纳入议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 11:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/12/5/n11703304.md#1" target="_blank">中国社科院金融所书记被查 曾任中纪委检查员</a><br></h3>中国社会科学院金融研究所党委书记、副所长王立民，日前被查。他被指“颇具背景”，曾在中共中央纪委、重庆任职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iqwytd266/djy/blob/master/gb/ncid277_4.md#1<br><a href="https://github.com/iqwytd266/djy/blob/master/gb/ncid277_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iqwytd266/djy/blob/master/gb/ncid277_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_4.htm">http://www.epochtimes.com/gb/ncid277_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
