--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/12/n11584520.md#1" target="_blank">江西降雨少创历史纪录 鄱阳湖水位跌破十米</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/12/n11584520.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/VCG111253376742-150x120.jpg" align ="left"></a>一场大面积的干旱正在江西蔓延，已致全省11设区市71县（市、区）312.3万人受灾。7月下旬以来，该省降雨量排有记录以来倒数第一位。江西境内中国最大淡水湖鄱阳湖水位跌破10米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 5:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/12/n11584444.md#1" target="_blank">广西玉林发生5.2级地震 香港逾千人报震感</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/12/n11584444.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/72644362_2453364248087533_228575088591503360_n-150x120.png" align ="left"></a>据中国地震台网发布消息，10月12日22时55分在广西玉林北流市发生5.2级地震。远在380公里之外的香港也有震感，当地多区市民纷纷报告震情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 2:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/12/n11584241.md#1" target="_blank">无锡高架桥坍塌 记者采访被拖到墙角殴打</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/12/n11584241.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/53a7d2b837a5b704fb312792936d5b8d-150x120.jpg" align ="left"></a>江苏无锡312国道往上海高架路段10日坍塌造成3死，有记者在现场采访时遭到公安阻挠、暴力相向，无人机也被击落。另外，面对施工品质疑虑，负责桥梁设计的公司则称“符合规范要求”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月12日 10:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/11/n11582269.md#1" target="_blank">无锡塌桥 因揭高官戴400万名表 2人被传唤</a><br></h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/11/n11582269.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1-27-150x120.jpg" align ="left"></a>昨日（10日）无锡立交桥垮塌后，有消息指，两位网民因揭露到场局长手戴400万人民币名表被传唤。还有消息称，事发后，网络信号屏蔽车比救护车先到。此外，该桥修建时仅耗时22个月，参加通车庆典的时任市长也已落马。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月11日 9:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/12/n11651047.md#1" target="_blank">北京确认内蒙古2人染鼠疫</a><br></h3>北京市朝阳区政府12日晚通报，内蒙古锡林郭勒盟苏尼特左旗有2人经诊断为“肺鼠疫”确诊病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 2:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/11/5/n11634752.md#1" target="_blank">深圳宝安国际机场高架桥线缆起火 浓烟滚滚</a><br></h3>11月5日中午12时左右，深圳宝安国际机场一座高架桥起火，暂时未造成人员伤亡。消防部门称，起火点是高架桥下的线缆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 5:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/30/n11621449.md#1" target="_blank">81天无雨土地干裂 江西安徽旱情严重</a><br></h3>七月下旬以来，大陆江西、安徽省持续高温且无降雨。官方称，平均无雨日有81天，江西、安徽各地发生严重旱情，部分地区出现特级旱情，土地龟裂、水稻枯死，农民损失惨重；江河湖库水位持续下级，部分地区出现民众饮水困难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iqwytd266/djy/blob/master/gb/19/10/28/n11617418.md#1" target="_blank">延安市车载试验装置突爆炸 至少8死5伤</a><br></h3>10月27日，陕西省延安市延长县一车载试验装置完成试验后，在回程途中突然发生爆炸，导致8死5伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 5:54 PM							</td></tr>
